[package]
name = "myblog"
version = "0.1.0"
authors = ["lcr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
mongodb = "0.4.0"
chrono = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]